buttons gap fix

--- a/src/sections/Hero/HeroStyles.module.css
+++ b/src/sections/Hero/HeroStyles.module.css
@@ -6,7 +6,7 @@
   text-align: center;
   height: 100dvh;
   min-height: 400px;
-  
+
 
   .hero {
     max-width: 200px;
@@ -52,9 +52,7 @@
     transform: translateY(2px);
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
   }
-  .resume-blog-buttons{
-    gap: 50px;
-  }
+
 }
 
 .colorModeContainer {
@@ -66,6 +64,7 @@
   right: 0;
   width: 25px;
 }
+
 
 .colorMode:hover {
   cursor: pointer;
@@ -81,7 +80,12 @@
   gap: 20px;
 }
 
-@media (width >= 800px) {
+.resumeBlogButtons {
+  display: flex;
+  gap: 7px;
+
+}
+@media (width >=800px) {
   .container {
     flex-direction: row-reverse;
     align-items: center;
@@ -94,10 +98,10 @@
   }
 }
 
-@media (width >= 1400px) {
-  
+@media (width >=1400px) {
+
   .container {
-    
+
     .hero {
       max-width: 400px;
       width: 400px;
